--- a/Preentrega_Desafio_Final/SistemaGestionUI/SistemaGestionUI.csproj
+++ b/Preentrega_Desafio_Final/SistemaGestionUI/SistemaGestionUI.csproj
@@ -8,4 +8,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaGestionBussiness\SistemaGestionBussiness.csproj" />
+    <ProjectReference Include="..\SistemaGestionEntities\SistemaGestionEntities.csproj" />
+  </ItemGroup>
+
 </Project>
